--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@ description: Track and optimize your investments in real time
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<video width="320" height="240" controls>
+			  <source src="{{ site.baseurl }}/images/RPReplay_Final1715145250.MOV" type="video/mov">
+			  Your browser does not support the video tag.
+			</video>
+
 		</div>
 	</div>
 </section>
