--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ description: Track and optimize your investments in real time
 		<div>
 			<video width="400" height="800" controls>
 			  <source src="{{ site.baseurl }}/images/RPReplay_Final1715145250.MOV" type="video/mov">
+			  <source src="{{ site.baseurl }}/images/RPReplay_Final1715145250.mp4" type="video/mp4">
 			  Your browser does not support the video tag.
 			</video>
 
